--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,298 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
+	.App-logo {
+		animation: App-logo-float infinite 3s ease-in-out;
+	}
 }
 
 .App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
 }
 
 .App-link {
-  color: rgb(112, 76, 182);
+	color: rgb(112, 76, 182);
 }
 
 @keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+	0% {
+		transform: translateY(0);
+	}
+	50% {
+		transform: translateY(10px);
+	}
+	100% {
+		transform: translateY(0px);
+	}
+}
+
+.container {
+}
+
+.navigation-menu {
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: nowrap;
+	align-items: center;
+	margin: 0px 600px;
+}
+
+.nav-btn {
+	text-decoration: none;
+	cursor: pointer;
+	color: black;
+	display: inline-block;
+	position: relative;
+	padding: 15px 30px;
+	border: 1px solid;
+	border-image: linear-gradient(
+		0deg,
+		rgba(29, 36, 34, 1) 25%,
+		rgba(234, 243, 75, 1) 65%,
+		rgba(253, 187, 45, 1) 100%
+	);
+	border-image-slice: 1;
+	margin: 10px 20px;
+	font-family: 'Montserrat', sans-serif;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	transition: 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.nav-btn:before {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 0;
+	width: 100%;
+	z-index: -1;
+	color: white;
+	background: linear-gradient(
+		0deg,
+		rgba(29, 36, 34, 1) 25%,
+		rgba(234, 243, 75, 1) 65%,
+		rgba(253, 187, 45, 1) 100%
+	);
+	transition: 0.8s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+.nav-btn:hover {
+	background: rgba(255, 255, 255, 0);
+}
+.nav-btn:hover:before {
+	bottom: 0%;
+	top: auto;
+	height: 100%;
+}
+
+div {
+	padding: 15px 0 0 0;
+}
+form {
+	position: relative;
+	width: 300px;
+	margin: 0 auto;
+}
+.d1 {
+	padding: 0px;
+	background: hidden;
+}
+.d1 input {
+	width: 75%;
+	margin-right: 40px;
+	height: 42px;
+	padding-left: 10px;
+	border: 2px solid #7ba7ab;
+	border-radius: 5px;
+	outline: none;
+	background: #f9f0da;
+	color: #9e9c9c;
+}
+.d1 button {
+	position: absolute;
+	margin-top: 3px;
+	top: 0;
+	right: 0px;
+	width: 42px;
+	height: 42px;
+	border: none;
+	background: #ffef3a;
+	border-radius: 5px;
+	cursor: pointer;
+}
+.d1 button:before {
+	color: #f9f0da;
+}
+
+.d1 button:hover {
+	background: #ffe29a;
+}
+
+.container-slider-movies {
+	margin-top: 10px;
+}
+
+.container-main {
+	background-color: #ffffff;
+	margin: 30px 100px;
+}
+
+.movies-menu {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
+}
+
+.container-footer {
+	position: relative;
+	background-color: #ffffff;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 80px;
+	z-index: -1;
+}
+
+.container-slider-movies {
+	width: 100%;
+	height: 400px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+}
+
+.slider-menu {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 80%;
+	height: 100%;
+}
+
+img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.slider-menu button {
+	padding: 10px 20px;
+	background-color: rgb(202, 202, 202);
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+button:hover {
+	background-color: rgb(230, 230, 230);
+	transition: 0.5s;
+}
+
+.button-slider-prev {
+	left: 155px;
+}
+
+.button-slider-next {
+	right: 155px;
+}
+
+.movies-menu img {
+	cursor: pointer;
+	height: 300px;
+	width: 300px;
+}
+
+.movies-menu img:hover {
+	opacity: 0.7;
+	transition: opacity 0.3s ease-in-out;
+}
+
+.movies-menu h3 {
+	font-size: 17px;
+}
+
+.modal__overlay {
+	background-color: rgba(0, 0, 0, 0.5);
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+}
+
+.modal {
+	margin-top: 20px;
+	max-width: 600px;
+	width: 100%;
+	position: fixed;
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: flex;
+	background-color: #373737;
+	box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.75);
+}
+
+.modal__content {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding: 3rem 1rem;
+}
+
+.modal-movie-image {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.75);
+}
+
+.modal-movie-info {
+	margin: 0px 15px;
+}
+
+.modal-button-close {
+	padding: 8px 10px;
+	margin: 50px 10px 0px 10px;
+	align-self: center;
+	font-size: 14px;
+	cursor: pointer;
+}
+
+.modal-button-close:hover {
+	background-color: #9e9c9c;
+}
+
+.modal-movie-average {
+	position: absolute;
+	top: 100px;
+	left: 160px;
+	border-radius: 50%;
+	width: 40px;
+	height: 30px;
+	justify-content: center;
+	align-items: center;
+	background-color: #1a191f;
+	color: #ffffff;
+	font-size: 12px;
+}
+
+.modal-movie-release {
+	font-size: 14px;
+	font-weight: bold;
 }
