--- a/src/App.css
+++ b/src/App.css
@@ -157,12 +157,12 @@ form {
 
 .container-footer {
 	position: relative;
-	background-color: #ffffff;
+	background-color: #1a191f;
 	left: 0;
 	bottom: 0;
 	width: 100%;
 	height: 80px;
-	z-index: -1;
+	z-index: 1;
 }
 
 .container-slider-movies {
@@ -295,4 +295,29 @@ button:hover {
 .modal-movie-release {
 	font-size: 14px;
 	font-weight: bold;
+}
+
+.footer {
+	display: flex;
+	justify-content: space-around;
+}
+
+.instagram-footer {
+	vertical-align: middle;
+	display: inline-block;
+}
+
+.footer svg {
+	color: #ffffff;
+}
+
+.footer a {
+	padding-left: 5px;
+	text-decoration: none;
+}
+
+.footer a:hover {
+	color: rgba(253, 187, 45, 1);
+	padding-left: 5px;
+	text-decoration: underline;
 }
